--- a/css/dash.css
+++ b/css/dash.css
@@ -85,6 +85,14 @@
   font-weight: 700;  
 }
 
+.description a {
+  color : inherit !important;
+}
+
+.description a:hover {
+  text-decoration: underline;
+}
+
 .preview-mobile {
   position: fixed; 
   top: 0; 
@@ -101,6 +109,23 @@
   animation-duration: 2s;
   -webkit-animation-name: slideup;
   animation-name: slideup;*/
+}
+
+.mobile-desc {
+  margin-left: 29px;
+  font-family:Nunito,sans-serif;
+  margin-top : -10px
+}
+
+.mobile-desc #outputdescription{
+  font-size: 11px;
+  font-weight: normal;
+}
+
+.div-picture {
+  margin-left : 7px;
+  width: 82px; 
+  height: 82px;
 }
 
 .preview-mobile.preview-none {
@@ -1204,4 +1229,35 @@ ADS
 }
 .close-ads{
   position:absolute;top:0px;right:7px;z-index: 9996;pointer:cursor;
+}
+
+@media(min-width:280px) and (max-width : 320px)
+{
+  .mobile-desc{
+    margin-left : 13px;
+  }
+}
+
+@media(min-width: 375px) and (max-width : 400px){
+  .mobile-desc{
+    margin-left : 34px;
+  }
+
+  .mobile-desc #outputdescription{
+    font-size: 12px;
+  }
+
+  .div-picture {
+    margin-left : 30px;
+  }
+}
+
+@media(min-width: 401px) and (max-width : 414px){
+  .mobile-desc{
+    margin-left : 63px;
+  }
+
+  .div-picture{
+    margin-left : 45px;
+  }
 }
