--- a/css/landing.css
+++ b/css/landing.css
@@ -36,7 +36,6 @@ h4,
 h5,
 h6 {
   font-family: opensanslight;
-  font-weight: 600;
 }
 
 html,body,#app {
@@ -54,6 +53,10 @@ body {
 
 p,span {
   color: #505050;
+}
+
+.body-content-mobile {
+  font-weight : normal;
 }
 
 .blue-txt {
@@ -105,6 +108,23 @@ p,span {
 
 .description > a:hover {
   text-decoration: underline;
+}
+
+#description {
+  padding-left : 5px;
+  background: #fff;
+  height : 80px;
+  border : 1px solid #ced4da;
+  overflow : auto;
+}
+
+#description[placeholder]:empty:before {
+    content: attr(placeholder);
+    color: #555; 
+}
+
+#description[placeholder]:empty:focus:before {
+    content: "";
 }
 
 @media screen and (max-width: 767px) {
