--- a/css/proof.css
+++ b/css/proof.css
@@ -3,16 +3,17 @@
   created : tue 03-Nov-2020;
 */
 
+small i {
+  color : #26C281;
+}
+
 .proof-box {
-  position: absolute;
-  top : 10px;
-  left : 10px;
-  z-index : 90;
-  width : 100%;
+ margin-left : auto;
+ margin-right : auto;
+ margin-bottom : 10px;
 }
 
 .proof-wrapper, .proof-wrapper-preview {
-  position: absolute;
   color : #000;
   width : 100%;
   max-width : 360px;
@@ -22,13 +23,11 @@
   border-radius : 10px;
   padding : 15px;
   display : inline-flex;
-  top : 0;
-  left : 0;
 }
 
 .proof_image img {
   width : 100%;
-  max-width : 65px;
+  max-width : 100px;
 }
 
 .proof-desc{
@@ -45,34 +44,49 @@
   width : 40%;
   margin-top: -6px;
   color : #ffc100 !important;
+  font-size : 10px;
 }
 
 .proof_name,.proof_name_preview {
   font-weight : bold;
   line-height: 12px;
   width : 60%;
+  font-size : 14px;
 }
 
 .proof_comments,.proof_comments_preview {
-  line-height : 20px;
+  line-height : 17px;
+  padding-top : 6px;
+  font-style: italic;
+  font-size : 12px;
 }
 
 /* Preview */
+
 .proof-box-preview {
-  position: absolute;
-  top : 10px;
-  z-index : 90;
   width : 100%;
+  position: relative;
 }
 
 .proof_name_preview,.proof_star_preview,.proof_comments_preview {
   font-size:11px;
 }
 
-@media(max-width:379px) {
+@media(max-width:414px){
   .proof-box {
-    left : 0;
+    padding : 0 !important;
   }
+
+  .proof_star {
+    margin-top : -3px;
+  }
+
+  .proof_name{
+    font-size: 12px;
+  }
+}
+
+@media(max-width:379px) {
 
   .proof_comments,.proof_name {
     font-size : 12px;
@@ -83,6 +97,45 @@
   }
   
   .proof_star {
-    margin-bottom: 2px;
+    margin-top: -3px;
+    font-size: 9px;
+  }
+}
+
+@media(max-width:360px) {
+  .proof_name{
+    font-size : 12px;
+  }
+
+  .proof_star {
+    width: 35%;
+    margin-top: -3px;
+    font-size: 9px;
+  }
+
+  .proof_comments{
+    line-height: 18px;
+    padding-top: 5px;
+    font-size: 11px;
+  }
+}
+
+@media(max-width:330px) {
+  .proof_name {
+    font-size : 10px;
+    width: 64%
+  }
+
+  .proof_star {
+    width: 32%;
+    margin-top: -1px;
+    font-size : 7px;
+  }
+
+  .proof_comments{
+    padding-top : 0;
+    line-height: 14px;
+    padding-top : 7px;
+    font-size : 9px;
   }
 }
