--- a/css/proof.css
+++ b/css/proof.css
@@ -7,9 +7,11 @@
  margin-left : auto;
  margin-right : auto;
  margin-bottom : 10px;
+ text-align: center;
 }
 
 .proof-wrapper, .proof-wrapper-preview {
+  position: relative;
   color : #000;
   width : 100%;
   max-width : 360px;
@@ -18,7 +20,9 @@
   border : 2px solid #f7f7f7;
   border-radius : 10px;
   padding : 10px;
-  display : inline-flex;
+  display : none;
+  top : 50px;
+  /*display : inline-flex;*/
 }
 
 .proof-desc small i, .proof-wrapper-preview small svg {
@@ -31,6 +35,7 @@
 }
 
 .proof-desc{
+  text-align: left;
   padding-left : 15px;
   width : 100%;
 }
@@ -42,7 +47,7 @@
 .proof_star,.proof_star_preview {
   text-align: right;
   width : 40%;
-  margin-top: -6px;
+  margin-top: -4px;
   color : #ffc100 !important;
   font-size : 10px;
 }
@@ -118,6 +123,7 @@
 
 @media(max-width:360px) {
   .proof_name{
+    min-width : 100px;
     font-size : 12px;
   }
 
