--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,21 @@ table tr:nth-child(even) td {
   animation: spin 2s linear infinite;
 }
 
+/*link button*/
+.image_icon_link {
+  position: absolute;
+  width: 48px;
+  left: 2px;
+  top: 0px;
+}
+
+.image_icon_link_btn {
+  border-radius: 28px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  position: relative;
+}
+
 /* WA CHAT */
 
 .del_chat_member, .del_chat_member > i, .edit_wa_member {
