--- a/css/redirect.css
+++ b/css/redirect.css
@@ -83,6 +83,21 @@ a:hover {
   text-decoration: underline;
 }
 
+/*link button*/
+
+.image_icon_link {
+  position: absolute;
+  width: 48px;
+  left: 18px;
+  top: 2px;
+}
+
+.image_icon_link_btn {
+  border-radius: 28px;
+  padding-top: 13px;
+  padding-bottom: 12px;
+}
+
 @media(min-width : 280px) and (max-width:359px){
   .textbutton{
     font-size : 12px;
