--- a/css/main.css
+++ b/css/main.css
@@ -166,9 +166,10 @@ table tr:nth-child(even) td {
 /*link button*/
 .image_icon_link {
   position: absolute;
-  width: 48px;
-  left: 2px;
-  top: 0px;
+  width: 40px;
+  height: 40px;
+  left: 6px;
+  top: 4px;
 }
 
 .image_icon_link_btn {
