--- a/css/css.css
+++ b/css/css.css
@@ -148,6 +148,7 @@
   .banner-image
   {
     height: 117px;
+    background-position: 0;
   }
   .galleryContainer 
   {
@@ -208,6 +209,7 @@
   .banner-image
   {
     height: 117px;
+    background-position: 0;
   }  
   .galleryContainer 
   {
@@ -265,10 +267,13 @@
     font-size: small; 
     margin-left: 22px;
   }
+  
   .banner-image
   {
-    height: 117px;
+    height: 125px;
+    background-position: 0;
   }  
+
   .galleryContainer 
   {
     width: 98%;
@@ -380,7 +385,8 @@
   {
     width: 100%;
     height: 152px;
-    background-size: cover;  
+    background-size: cover;
+    background-position: 0;
   }
 
   .ultitle{
@@ -456,7 +462,8 @@
   {
     width: 100%;
     height: 152px;
-    background-size: cover;  
+    background-size: cover;
+    background-position: 0;
   }
 
 .galleryContainer 
